[package]
name = "rooibos-rsx-old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { path = "../../../ratatui", default-features = false }
derive_builder = "0.20"
once_cell = "1"
rooibos-rsx-macros-old = { path = "../rooibos-rsx-macros-old" }
typed-builder = "0.18"
rooibos-reactive-old = { path = "../rooibos-reactive-old" }
matchit = "0.7"
url = "2"
