[package]
name = "rooibos-rsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
once_cell = "1"
ratatui = { version = "0.23", default-features = false }
rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
typed-builder = "0.16"
rooibos-reactive = { path = "../rooibos-reactive" }
typemap-ors = "1.0.0"
