[package]
name = "rooibos-rsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
once_cell = "1"
ratatui = { git = "https://github.com/ratatui-org/ratatui", rev = "301366c4fa33524b0634bbd3dcf1abd1a1ebe7c6", default-features = false }
rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
typed-builder = "0.16"
rooibos-reactive = { path = "../rooibos-reactive" }
matchit = "0.7"
