[package]
name = "rooibos-rsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"
once_cell = "1"
ratatui = { version = "0.24.0", default-features = false }
rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
typed-builder = "0.18"
rooibos-reactive = { path = "../rooibos-reactive" }
matchit = "0.7"
url = "2"
