[package]
name = "rooibos-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
rooibos-dom = { path = "../rooibos-dom" }
rooibos-reactive = { path = "../rooibos-reactive", optional = true }
ratatui = { version = "0.28", default-features = false }
tracing = "0.1"
educe = "0.6"
tokio-util = "0.7"
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
  "all",
] }
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "14ead7cf98eb9c32962665abb00a06df728992c8" }
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
thiserror = "1.0.63"
rooibos-terminal = { path = "../rooibos-terminal" }
proc-exit = "2.0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.38.1", default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
signal-hook = "0.3"
async-signal = "0.2"
tokio = { version = "1.38.1", default-features = false, features = [
  "sync",
  "macros",
  "time",
  "rt",
  "process",
] }


[features]
default = ["crossterm", "reactive"]
reactive = ["rooibos-reactive"]
crossterm = ["rooibos-terminal/crossterm"]
termion = ["rooibos-terminal/termion"]
termwiz = ["rooibos-terminal/termwiz"]
clipboard = ["rooibos-terminal/clipboard"]
