[package]
name = "rooibos-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true, optional = true }
ratatui = { workspace = true, default-features = false }
tracing = { workspace = true }
educe = { workspace = true }
tokio-util = { workspace = true }
wasm-compat = { workspace = true, features = ["all"] }
background-service = { workspace = true }
futures-cancel = { workspace = true }
thiserror = { workspace = true }
rooibos-terminal = { workspace = true }
proc-exit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }
console_error_panic_hook = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
signal-hook = { workspace = true }
async-signal = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "macros",
  "time",
  "rt",
  "process",
] }


[features]
default = ["crossterm", "reactive"]
reactive = ["rooibos-reactive"]
crossterm = ["rooibos-terminal/crossterm"]
termion = ["rooibos-terminal/termion"]
termwiz = ["rooibos-terminal/termwiz"]
clipboard = ["rooibos-terminal/clipboard"]
