[package]
name = "rooibos-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
russh = { workspace = true }
rooibos-runtime = { workspace = true }
rooibos-terminal = { workspace = true }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
ratatui = { workspace = true, default-features = false }
tracing = { workspace = true }
tap = { workspace = true }
futures = { workspace = true }
async-signal = { workspace = true }
terminput = { workspace = true }
futures-cancel = { workspace = true }
background-service = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }

[features]
clipboard = ["rooibos-runtime/clipboard"]
