[package]
name = "rooibos-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = { workspace = true }
rooibos-runtime = { workspace = true }
rooibos-terminal = { workspace = true, features = ["termina"] }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
tokio-util = { workspace = true }
ratatui = { workspace = true, default-features = false }
tracing = { workspace = true }
tap = { workspace = true }
futures = { workspace = true }
async-signal = { workspace = true }
terminput = { workspace = true }
terminput-termina = { workspace = true }
background-service = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
termina = { workspace = true }
stream-cancel = { workspace = true }
rooibos-theme = { workspace = true }
termprofile = { workspace = true, features = ["query-detect", "terminfo"] }
# temp workaround for build issues
rand_core = { version = "=0.10.0-rc-3" }

[features]
scrolling-regions = ["ratatui/scrolling-regions"]
