[package]
name = "rooibos-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
ratatui = { version = "0.29", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }
rooibos-dom = { path = "../rooibos-dom" }
crossterm = { version = "0.28.1", features = [
  "event-stream",
  "use-dev-tty",
], optional = true }
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
tracing = "0.1"
termwiz = { version = "0.22.0", optional = true }
base64 = { version = "0.22.1", optional = true }
tokio-stream = { version = "0.1.16", features = ["sync"] }

[target.'cfg(unix)'.dependencies]
termion = { version = "4", optional = true }

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4", features = ["std"], optional = true }

[features]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
termion = ["dep:termion", "ratatui/termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz"]
clipboard = ["dep:base64", "clipboard-win"]
