[package]
name = "rooibos-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
ratatui = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }
rooibos-dom = { workspace = true }
crossterm = { workspace = true, features = [
  "event-stream",
  "use-dev-tty",
], optional = true }
tracing = { workspace = true }
termwiz = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
tokio-stream = { workspace = true, features = ["sync"] }
terminput-crossterm = { workspace = true, optional = true }
terminput-termion = { workspace = true, optional = true }
terminput-termwiz = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
termion = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
clipboard-win = { workspace = true, features = ["std"], optional = true }

[features]
crossterm = ["dep:crossterm", "ratatui/crossterm", "terminput-crossterm"]
termion = ["dep:termion", "ratatui/termion", "terminput-termion"]
termwiz = ["dep:termwiz", "ratatui/termwiz", "terminput-termwiz"]
clipboard = ["dep:base64", "clipboard-win"]
