[package]
name = "rooibos-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
ratatui = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }
rooibos-dom = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
stream-cancel = { workspace = true }
tui-theme = { workspace = true, features = ["dcs-detect", "terminfo"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
terminput-termina = { workspace = true, optional = true }
termina = { workspace = true, optional = true }

[features]
termina = ["dep:termina", "dep:terminput-termina"]
scrolling-regions = ["ratatui/scrolling-regions"]
