[package]
name = "rooibos-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
rooibos-runtime = { workspace = true, optional = true }
rooibos-terminal = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["time"] }
rooibos-dom = { workspace = true }
rooibos-reactive = { workspace = true }
unicode-width = { workspace = true }

[features]
default = ["runtime"]
runtime = ["rooibos-runtime"]
