[package]
name = "rooibos-theme-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
manyhow = { workspace = true }
proc-macro-crate = { workspace = true }
darling = { workspace = true }
itertools = { workspace = true }
