[package]
name = "rooibos-web"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false, features = ["sync"] }
tracing = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window", "Document"] }
rooibos-dom = { workspace = true }
rooibos-terminal = { workspace = true }
tap = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
terminput-web-sys = { workspace = true }
wasm-compat = { workspace = true }
