[package]
name = "rooibos-xterm-js"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui-xterm-js = { git = "https://github.com/aschey/ratatui-xterm-js", rev = "eb9b25d421108097d0636142bbd3ac9b67ff6ad7" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3"
ratatui = { version = "0.28", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
tracing = "0.1"
web-sys = { version = "0.3.64", features = ["console", "Window", "Document"] }
rooibos-dom = { path = "../rooibos-dom" }
rooibos-terminal = { path = "../rooibos-terminal" }
tap = "1"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
