[package]
name = "rooibos-xterm-js"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui-xterm-js = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
futures = { workspace = true }
ratatui = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false, features = ["sync"] }
tracing = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window", "Document"] }
rooibos-dom = { workspace = true }
rooibos-terminal = { workspace = true }
tap = { workspace = true }
futures-cancel = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
