[package]
name = "rooibos"
version = "0.1.0"
edition = "2024"

[dependencies]
rooibos-runtime = { workspace = true, optional = true }
rooibos-reactive = { workspace = true }
rooibos-reactive-macros = { workspace = true }
rooibos-components = { workspace = true }
rooibos-config = { workspace = true, optional = true }
rooibos-tester = { workspace = true, optional = true }
rooibos-terminal = { workspace = true }
rooibos-ssh = { workspace = true, optional = true }
rooibos-xterm-js = { path = "../rooibos-xterm-js", optional = true }
rooibos-router = { path = "../rooibos-router", optional = true }
rooibos-keybind = { path = "../rooibos-keybind", optional = true }
ratatui = { workspace = true, default-features = false }

[dev-dependencies]
tokio = "1.43.0"
insta = "1.42.1"

[features]
default = ["crossterm", "runtime", "scrolling-regions"]
nightly = ["rooibos-reactive/nightly"]
crossterm = [
  "rooibos-runtime/crossterm",
  "rooibos-components/crossterm",
  "rooibos-terminal/crossterm",
]
termion = [
  "rooibos-runtime/termion",
  "rooibos-components/termion",
  "rooibos-terminal/termion",
]
termwiz = [
  "rooibos-runtime/termwiz",
  "rooibos-components/termwiz",
  "rooibos-terminal/termwiz",
]
tester = ["rooibos-tester"]
runtime = ["rooibos-runtime", "rooibos-keybind?/runtime"]
xterm-js = ["rooibos-xterm-js"]
config = ["rooibos-config"]
ssh = ["rooibos-ssh"]
router = ["rooibos-router"]
input-search = ["rooibos-components/input-search"]
terminal-widget = ["rooibos-components/terminal-widget"]
input = ["rooibos-components/input"]
image = ["rooibos-components/image"]
clipboard = [
  "rooibos-runtime/clipboard",
  "rooibos-terminal/clipboard",
  "rooibos-ssh?/clipboard",
]
keybind = ["rooibos-keybind"]
spinner = ["rooibos-components/spinner"]
derive-commands = ["rooibos-keybind?/derive-commands"]
effects = ["rooibos-reactive/effects"]
palette = ["ratatui/palette"]
scrolling-regions = ["rooibos-reactive/scrolling-regions"]
