[package]
name = "rooibos"
version = "0.1.0"
edition = "2024"

[dependencies]
rooibos-runtime = { workspace = true, optional = true }
rooibos-reactive = { workspace = true }
rooibos-reactive-macros = { workspace = true }
rooibos-components = { workspace = true }
rooibos-config = { workspace = true, optional = true }
rooibos-tester = { workspace = true, optional = true }
rooibos-terminal = { workspace = true }
rooibos-ssh = { workspace = true, optional = true }
rooibos-web = { workspace = true, optional = true }
rooibos-router = { workspace = true, optional = true }
rooibos-keybind = { workspace = true, optional = true }
rooibos-theme = { workspace = true }
ratatui = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true }
insta = { workspace = true }

[features]
default = ["termina", "runtime"]
nightly = ["rooibos-reactive/nightly"]
termina = ["rooibos-terminal/termina"]
tester = ["rooibos-tester"]
runtime = ["rooibos-runtime", "rooibos-keybind?/runtime"]
web = ["rooibos-web"]
config = ["rooibos-config"]
config-confique = ["rooibos-config/confique"]
config-schematic = ["rooibos-config/schematic"]
config-json = ["rooibos-config/json"]
config-yaml = ["rooibos-config/yaml"]
config-toml = ["rooibos-config/toml"]
ssh = ["rooibos-ssh"]
router = ["rooibos-router"]
input-search = ["rooibos-components/input-search"]
terminal-widget = ["rooibos-components/terminal-widget"]
input = ["rooibos-components/input"]
image = ["rooibos-components/image"]
keybind = ["rooibos-keybind"]
spinner = ["rooibos-components/spinner"]
derive-commands = ["rooibos-keybind?/derive-commands"]
effects = ["rooibos-reactive/effects"]
palette = ["ratatui/palette"]
scrolling-regions = [
  "rooibos-reactive/scrolling-regions",
  "rooibos-terminal/scrolling-regions",
  "rooibos-ssh?/scrolling-regions",
]
