[package]
name = "wasm-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
rooibos = { path = "../../crates/rooibos", features = ["xterm-js"] }
tokio = { version = "1.44.1", features = ["rt", "macros"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"


[features]
nightly = ["rooibos/nightly"]
