[package]
name = "wasm-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true }
rooibos = { workspace = true, features = ["xterm-js"] }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[features]
nightly = ["rooibos/nightly"]
